[project]
name = "ben-ti-ions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben", email = "bennyp2494@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ben-ti-ions = "ben_ti_ions:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
